--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@ body {
     background-color: var(--pretoooo);
     color: var(--branco-principal);
 }
+
+
+.primcipal{
+   background-image: url("Background.png");
+}
