--- a/style.css
+++ b/style.css
@@ -16,3 +16,18 @@ body {
    background-repeat: no-repeat;
    height: 100vh;
 }
+
+
+.principal-botao-{
+    background-color: var(--botao-azul);
+    color: var(--branco-principal);
+    border-radius: 5px;
+    padding: 16px;
+
+
+.principal-botao-{
+    background-color: transparent;
+    color: var(--branco-principal);
+    border-radius: 5px;
+    padding: 16px;
+}
