--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     color: var(--branco-principal);
     border-radius: 5px;
     padding: 16px;
-}}
+}
 
 .principal-botao-2{
     background-color: transparent;
