--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --branco-principal: #FFFFFF;
     --cinza-secundario: #c0c0c0;
     --botao-azul:#167bf7;
-    --preto: #00030c;
+    --cor-de-fundo: #00030c;
 }
 body {
     background-color: var(--pretoooo);
