--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --cor-de-fundo: #00030c;
 }
 body {
-    background-color: var(--pretoooo);
+    background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
 }
 
@@ -23,6 +23,7 @@ body {
     color: var(--branco-principal);
     border-radius: 5px;
     padding: 16px;
+    text-decoration: none;
 }
 
 .principal-botao-2{
@@ -30,4 +31,5 @@ body {
     color: var(--branco-principal);
     border-radius: 5px;
     padding: 16px;
+    text-decoration: none;
 }
