--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 
-.principal-botao-{
+.principal-botao{
     background-color: var(--botao-azul);
     color: var(--branco-principal);
     border-radius: 5px;
