--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     border-radius: 5px;
     padding: 16px;
     text-decoration: none;
+    display: block;
 }
 
 .principal-botao-2{
@@ -32,4 +33,5 @@ body {
     border-radius: 5px;
     padding: 16px;
     text-decoration: none;
+    display: block;
 }
