--- a/style.css
+++ b/style.css
@@ -47,3 +47,8 @@ body {
     font-size: 28px;
     font-weight:700;
 }
+
+.principal-aviso{
+    font-size: 14px;
+    color:var(--cinza-secundario);
+}
