--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
     padding: 16px;
     text-decoration: none;
     display: block;
+    margin-botom: 16px
 }
 
 .principal-titulo{
@@ -51,4 +52,12 @@ body {
 .principal-aviso{
     font-size: 14px;
     color:var(--cinza-secundario);
+}
+
+.principal-imagem{
+    margin: 16px 0 32px 0;
+}
+
+.principal-caixa{
+    margin: 0 96px;
 }
