--- a/style.css
+++ b/style.css
@@ -84,4 +84,9 @@ body {
 .secundaria-texto{
     color: var(--cinza-secundario);   
 }
+
+.secundaria-botao{
+    display: inline-block;
+    margin-top: 16px;
+}
     
