--- a/style.css
+++ b/style.css
@@ -90,3 +90,11 @@
         display: inline-block;
         margin-top: 16px;
     }
+    .dispositivos-lista{
+        display: flex;
+        list-style: none;
+        margin: 80px 0;
+    }
+    .dispoitivos{
+        text-align: center;
+    }
