--- a/style.css
+++ b/style.css
@@ -95,10 +95,10 @@
         list-style: none;
         margin: 80px 0;
     }
-    .dispoitivos{
+    .dispositivos{
         text-align: center;
     }
-    .dispoitivos-titulo{
+    .dispositivos-titulo{
         font-size: 48px;
     }
     .lista-item{
