--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@
         display: flex;
         list-style: none;
         margin: 80px 0;
+        justify-content: center;
     }
     .dispositivos{
         text-align: center;
